--- a/proposal.html
+++ b/proposal.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <title>Project Proposal</title>
 </head>
 <body>
@@ -16,7 +17,23 @@
         <section>
             <h2> Topic Overview</h2>
             <p>
-
+                Taiko Kai is the University of Washington's first Taiko ensemble, and was founded in 2013 by three sisters at UW. Taiko Kai's goal
+                is to promote and spread appreciation Japanese culture through the art of traditional Japanese drumming by evoking a sense of heritage
+                and social understanding.  Since Taiko's founding, Since then, Taiko Kai has performed at various campus events such as FIUTS's
+                CulturalFest, New Student Orientation, and the TSA Night Market. They have also performed at noteworthy events in the Seattle area
+                such as Redmond City Lights and Sakura-Con.
+            </p>
+            <p>
+                However, the club currently has no web functional web platform.  Currently, information about Taiko Kai is scattered across multiple 
+                Facebook and campus centers. With a large portion of Taiko Kai's performance and equipment funding coming from performance 
+                bookings/donations, it would be beneficial for Taiko Kai to have a hub for booking and information about the club.  Additionally, 
+                Taiko Kai struggles to recruit new members each year, with most new members joining the club through on-campus promotions (RSO Fair)
+                and word of mouth. As such, having a web application for potential members to express interest and discover the club would also be 
+                helpful. Finally, all member-related documents and information are stored in Google Drive.  As such, we would like to create a
+                webpage that would consolidate all current information.  The website would not only be a source for anyone intereted in discovering
+                more about Taiko, but would also be a way for potential members and bookers to contact Taiko Kai directly.  In addition, the website
+                would be a resource for current Taiko members as a central point of access for meeting notes, sheet music, and practice videos are
+                currently stored in several Google Drives.
             </p>
         </section>
             
