added photo and edited text

--- a/proposal.html
+++ b/proposal.html
@@ -13,11 +13,13 @@
 <body>
     <header>
         <h1> Project Proposal </h1>
+        <p> By Aaron Zhao and Dorothy Lu</p>
     </header>
 
     <main>
         <section>
             <h2> Topic Overview</h2>
+            <img src="img/springconcert2019.jpg" alt="spring concert 2019">
             <p>
                 Taiko Kai is the University of Washington's first Taiko ensemble, and was founded in 2013 by three sisters at UW. Taiko Kai's goal
                 is to promote and spread appreciation Japanese culture through the art of traditional Japanese drumming by evoking a sense of heritage
@@ -47,12 +49,12 @@
             </p>
             <ul>
                 <li>
-                    1. Performances Related Acvitities
+                    Performances Related Acvitities
                     <ul>
                         <p>This includes functions such as booking performances, looking up upcoming performances,
-                            and getting in touch with the club
-                            UW Taiko Kai performs for the students.
-                            Thus we want to make sure that they have easy access towards those information.
+                            and getting in touch with the club.
+                            UW Taiko Kai performs for the students,and as such,
+                            we want to make sure that they have easy access towards those information.
                             This application of our website allows user to find the information about our performances.
                             This also allows organizations to book appointment with us more easily when they have the
                             need.
@@ -60,7 +62,7 @@
                     </ul>
                 </li>
                 <li>
-                    2. Account Management
+                    Account Management
                     <ul>
                         <p>
                             We want to have a personal portal for our users.
@@ -68,22 +70,22 @@
                             For the general public, they can view the performances they scheduled, they booked, or they
                             plan to attend.
                             For members, they can access club related files such as
-                            Meeting Notes, attendance, documents on who's performances, Taiko Kai Constitution.
-                            Club directors have more functions as an Admin account.
+                            meeting Notes, attendance, performances documents, practice videos, sheet music, etc.
+                            Club directors would have more functions as an Admin account.
                             They can manage members, control files, and make changes to certain things on the website.
-                            All users have access towards performance videos and some of the basic Taiko techniques.
+                            All users have access towards performance videos and basic Taiko documentation.
                         </p>
                     </ul>
                 </li>
                 <li>
-                    3. Taiko Related Info
+                    Taiko Related Info
                     <ul>
                         <p>
                             UW Taiko Kai also aims to educate the general public about the culture of Taiko.
                             Thus, we dedicate this section to the history of Taiko and UW Taiko Kai.
                             The website will contain the history Taiko as a musical instrument in Japan and how it
                             spreads around the world.
-                            It will also talk about the history of UW Taiko Kai, as a RSO, its developments, and its
+                            It will also talk about the history of UW Taiko Kai as a RSO, its developments, and its
                             current members.
                         </p>
                     </ul>
