--- a/proposal.html
+++ b/proposal.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1> Project Proposal </h1>
-        <p> By Aaron Zhao and Dorothy Lu</p>
+        <p><em>By Aaron Zhao and Dorothy Lu</em></p>
     </header>
 
     <main>
@@ -43,63 +43,53 @@
 
         <section>
             <h2> Potential Applications </h2>
-            <p>
 
+            <p>
                 Some of our web's potntial applications are:
             </p>
+
             <ul>
                 <li>
-                    Performances Related Acvitities
-                    <ul>
-                        <p>This includes functions such as booking performances, looking up upcoming performances,
-                            and getting in touch with the club.
-                            UW Taiko Kai performs for the students,and as such,
-                            we want to make sure that they have easy access towards those information.
-                            This application of our website allows user to find the information about our performances.
-                            This also allows organizations to book appointment with us more easily when they have the
-                            need.
-                        </p>
-                    </ul>
+                    <b>Performances Related Acvitities</b><br>
+                    This includes functions such as booking performances, looking up upcoming performances, and getting in touch with the club.
+                    UW Taiko Kai performs for both student as well as outside organizations.  As such, we want to make sure that everyone has easy 
+                    access and will be able to quickly conatct Taiko Kai. Users would be able to quickly fill out a form with their organization 
+                    information and potential performance dates and locations to book Taiko Kai for performances. Additionally, this application of 
+                    our website would also allow users to find information about upcoming workshops, events, and performances, whether it be through
+                    a search function or a calendar or events.  All of Taiko Kai's contact information will also be available for anyone else that
+                    feels the need to contact the club.
                 </li>
                 <li>
-                    Account Management
-                    <ul>
-                        <p>
-                            We want to have a personal portal for our users.
-                            The portal helps the user to organize their information.
-                            For the general public, they can view the performances they scheduled, they booked, or they
-                            plan to attend.
-                            For members, they can access club related files such as
-                            meeting Notes, attendance, performances documents, practice videos, sheet music, etc.
-                            Club directors would have more functions as an Admin account.
-                            They can manage members, control files, and make changes to certain things on the website.
-                            All users have access towards performance videos and basic Taiko documentation.
-                        </p>
-                    </ul>
+                    <b>Account Management</b><br> 
+                    We want to have a personal portal for our users.  Users would be able to create an account with their email.
+                    The portal helps the user to organize their information.
+                    The general public would be able to view the performances they booked, or they
+                    plan to attend, as well as opt into a quarterly newsletter/email update.
+                    Members would be able to access club related files such as
+                    meeting Notes, attendance, performances documents, practice videos, sheet music, etc.
+                    Club directors would have more functions as an Admin account.
+                    They can manage members, control files, and make changes to certain things on the website.
+                    All users have access towards performance videos and basic Taiko documentation.
                 </li>
                 <li>
-                    Taiko Related Info
-                    <ul>
-                        <p>
-                            UW Taiko Kai also aims to educate the general public about the culture of Taiko.
-                            Thus, we dedicate this section to the history of Taiko and UW Taiko Kai.
-                            The website will contain the history Taiko as a musical instrument in Japan and how it
-                            spreads around the world.
-                            It will also talk about the history of UW Taiko Kai as a RSO, its developments, and its
-                            current members.
-                        </p>
-                    </ul>
+                    <b>Taiko Related Info</b><br>
+                    UW Taiko Kai also aims to educate the general public about the culture of Taiko.
+                    Thus, we dedicate this section to the history of Taiko and UW Taiko Kai.
+                    The website will contain the history Taiko as a musical instrument in Japan and how it
+                    spreads around the world.
+                    It will also talk about the history of UW Taiko Kai as a RSO, its developments, and its
+                    current members.
                 </li>
-
             </ul>
         </section>
+
         <section>
             <h2> Additional Resources </h2>
 
             <p>To learn more about Taiko's history, click <a
                     href="https://www.taiko-center.co.jp/english/history_of_taiko.html">here</a>. </p>
             <p> To learn more about Taiko in the U.S, click <a href="https://taikocommunityalliance.org/">here</a>.</p>
-            <p> To learn more about UW Taiko Kai, click<a
+            <p> To learn more about UW Taiko Kai, click <a
                     href="https://huskylink.washington.edu/organization/taikokai">here</a>.
             </p>
         </section>
