--- a/index.html
+++ b/index.html
@@ -13,44 +13,37 @@
 <body>
     <header>
         <h1>Project Proposal</h1>
-        <p><em>By Aaron Zhao and Dorothy Lu</em></p>
+        <p class="byline"> By Dorothy Lu & Aaron Zhao</p>
     </header>
 
     <main>
         <section>
+            
             <h2> Topic Overview</h2>
             <img src="img/springconcert2019.jpg" alt="spring concert 2019">
             <p>
                 Taiko Kai is the University of Washington's first Taiko ensemble, and was founded in 2013 by three
-                sisters at UW. Taiko Kai's goal
-                is to promote and spread appreciation Japanese culture through the art of traditional Japanese drumming
-                by evoking a sense of heritage
-                and social understanding. Since Taiko's founding, Since then, Taiko Kai has performed at various campus
-                events such as FIUTS's
-                CulturalFest, New Student Orientation, and the TSA Night Market. They have also performed at noteworthy
-                events in the Seattle area
-                such as Redmond City Lights and Sakura-Con.
+                sisters at UW. Taiko Kai's goal is to promote and spread appreciation Japanese culture through the art
+                of traditional Japanese drumming by evoking a sense of heritage and social understanding. The club also
+                fosters connections between its members and the Japanese-American community, helping them develop both
+                personal and team-based skills. Since Taiko's founding, Taiko Kai has performed at various campus
+                events such as FIUTS's CulturalFest, New Student Orientation, and the TSA Night Market. They have also
+                performed at noteworthy events in the Seattle area such as Redmond City Lights and Sakura-Con.
             </p>
             <p>
-                However, the club currently has no web functional web platform. Currently, information about Taiko Kai
-                is scattered across multiple
-                Facebook and campus centers. With a large portion of Taiko Kai's performance and equipment funding
-                coming from performance
-                bookings/donations, it would be beneficial for Taiko Kai to have a hub for booking and information about
-                the club. Additionally,
-                Taiko Kai struggles to recruit new members each year, with most new members joining the club through
-                on-campus promotions (RSO Fair)
-                and word of mouth. As such, having a web application for potential members to express interest and
-                discover the club would also be
-                helpful. Finally, all member-related documents and information are stored in Google Drive. As such, we
-                would like to create a
-                webpage that would consolidate all current information. The website would not only be a source for
-                anyone intereted in discovering
-                more about Taiko, but would also be a way for potential members and bookers to contact Taiko Kai
-                directly. In addition, the website
-                would be a resource for current Taiko members as a central point of access for meeting notes, sheet
-                music, and practice videos are
-                currently stored in several Google Drives.
+                However, the club currently has no web functional web platform. Information about Taiko Kai
+                is scattered across multiple Facebook and campus pages. With a large portion of Taiko Kai's
+                performance and equipment funding coming from performance bookings/donations, it would be beneficial
+                for Taiko Kai to have a hub for booking and information about the club. Additionally, Taiko Kai
+                struggles to recruit new members each year, with most new members joining the club through on-campus
+                promotions and word of mouth. As such, having a web application for potential members to
+                express interest and discover the club would also be helpful. Finally, all member-related documents
+                and information are stored in Google Drive. As such, we would like to create a webpage that would
+                consolidate all current information. The website would not only be a source for anyone intereted in
+                discovering more about Taiko, but would also be a way for potential members and bookers to contact
+                Taiko Kai directly. In addition, the website would be a resource for current Taiko members as a central
+                point of access for meeting notes, sheet music, and practice videos which are currently stored in Google
+                Drive.
             </p>
         </section>
 
@@ -58,47 +51,41 @@
             <h2> Potential Applications </h2>
 
             <p>
-                Some of our web's potential applications are:
+                Some of our websites's potential applications are:
             </p>
 
             <ul>
                 <li>
-                    <b>Performances Related Acvitities</b><br>
+                    <b>Event Management</b><br>
+                    One application of our website would be to simplify processes surrounding events and performances.
                     This includes functions such as booking performances, looking up upcoming performances, and getting
-                    in touch with the club.
-                    UW Taiko Kai performs for both student as well as outside organizations. As such, we want to make
-                    sure that everyone has easy
-                    access and will be able to quickly conatct Taiko Kai. Users would be able to quickly fill out a form
-                    with their organization
-                    information and potential performance dates and locations to book Taiko Kai for performances.
-                    Additionally, this application of
-                    our website would also allow users to find information about upcoming workshops, events, and
-                    performances, whether it be through
-                    a search function or a calendar or events. All of Taiko Kai's contact information will also be
-                    available for anyone else that
-                    feels the need to contact the club.
+                    in touch with the club. UW Taiko Kai performs for both student as well as outside organizations.
+                    As such, we want to make sure that everyone has easy access and will be able to quickly conatct
+                    Taiko Kai. Users would be able to quickly fill out a form with their organization information and
+                    potential performance dates/locations to book Taiko Kai for performances. Additionally, this
+                    application of our website would also allow users to find information about upcoming workshops,
+                    events, and performances, whether it be through a search function or a calendar or events. All of
+                    Taiko Kai's contact information will also be available for anyone else that feels the need to
+                    contact the club.
                 </li>
                 <li>
-                    <b>Account Management</b><br>
+                    <b>User Accounts & Data Storage</b><br>
                     We want to have a personal portal for our users. Users would be able to create an account with their
-                    email.
-                    The portal helps the user to organize their information.
-                    The general public would be able to view the performances they booked, or they
-                    plan to attend, as well as opt into a quarterly newsletter/email update.
-                    Members would be able to access club related files such as
-                    meeting Notes, attendance, performances documents, practice videos, sheet music, etc.
-                    Club directors would have more functions as an Admin account.
-                    They can manage members, control files, and make changes to certain things on the website.
-                    All users have access towards performance videos and basic Taiko documentation.
+                    email. The portal helps users organize their information. The general public would be able to view
+                    the performances they booked or plan to attend, as well as opt into a quarterly newsletter/email
+                    update. Members would be able to access club related files such as meeting notes, attendance,
+                    performances documents, practice videos, sheet music, etc. Club officers would have more additional
+                    administrative rights as an admin account. They would be able to manage members, edit/organize files,
+                    and make changes to website elements. All users would have access towards performance videos and
+                    basic Taiko documentation.
                 </li>
                 <li>
-                    <b>Taiko Related Info</b><br>
-                    UW Taiko Kai also aims to educate the general public about the culture of Taiko.
-                    Thus, we dedicate this section to the history of Taiko and UW Taiko Kai.
-                    The website will contain the history Taiko as a musical instrument in Japan and how it
-                    spreads around the world.
-                    It will also talk about the history of UW Taiko Kai as a RSO, its developments, and its
-                    current members.
+                    <b>Cultural Education</b><br>
+                    UW Taiko Kai also aims to educate the general public about UW Taiko and its roots. Thus, a section of
+                    the webpage will be dedicated to the history of Taiko and UW Taiko Kai. This includes the history
+                    and cultural significance of Taiko as a musical instrument in Japan, as well as how the performance
+                    art spread to the United States. It will also talk about the history of UW Taiko Kai as an RSO, its
+                    development, and its current status at UW.
                 </li>
             </ul>
         </section>
@@ -114,6 +101,10 @@
             </p>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; Dorothy Lu & Aaron Zhao</p>
+    </footer>
 
 </body>
 
