final commit for real

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 performance and equipment funding coming from performance bookings/donations, it would be beneficial
                 for Taiko Kai to have a hub for booking and information about the club. Additionally, Taiko Kai
                 struggles to recruit new members each year, with most new members joining the club through on-campus
-                promotions and word of mouth. As such, having a web application for potential members to
+                promotions and word of mouth. Having a web application for potential members to
                 express interest and discover the club would also be helpful. Finally, all member-related documents
                 and information are stored in Google Drive. As such, we would like to create a webpage that would
-                consolidate all current information. The website would not only be a source for anyone intereted in
+                consolidate all current information. The website would not only be a source for anyone interested in
                 discovering more about Taiko, but would also be a way for potential members and bookers to contact
                 Taiko Kai directly. In addition, the website would be a resource for current Taiko members as a central
                 point of access for meeting notes, sheet music, and practice videos which are currently stored in Google
