--- a/proposal.html
+++ b/proposal.html
@@ -58,20 +58,24 @@
                 <li>
                     <b>Event Management</b><br>
                     One application of our website would be to simplify processes surrounding events and performances.
-                    This includes functions such as booking performances, looking up upcoming performances, and getting
-                    in touch with the club. UW Taiko Kai performs for both student as well as outside organizations.
+                    This includes functions such as booking performances, looking up upcoming events, and getting
+                    connected with the club. UW Taiko Kai performs for both student as well as outside organizations.
                     As such, we want to make sure that everyone has easy access and will be able to quickly conatct
-                    Taiko Kai. Users would be able to quickly fill out a form with their organization information and
-                    potential performance dates/locations to book Taiko Kai for performances. Additionally, this
-                    application of our website would also allow users to find information about upcoming workshops,
-                    events, and performances, whether it be through a search function or a calendar or events. All of
-                    Taiko Kai's contact information will also be available for anyone else that feels the need to
-                    contact the club.
+                    Taiko Kai. One function of our application would include a form that users would be able to quickly
+                    fill out with their organization information and potential performance dates/locations to book
+                    Taiko Kai for performances. Right now, the sole way to book Taiko Kai would be to email the club,
+                    which can become complicated as clients often don't know exactly what information they need to
+                    provide.  By utilizing a form, both Taiko and potential event organizers can receive the
+                    information needed to book Taiko for events.
+                    Another application of our website would allow users to find information about upcoming workshops,
+                    events, and performances, primarily through a feed and embedded Google Calendar of events. All of
+                    Taiko Kai's contact information and social media will be available for anyone else that feels the
+                    need to contact the club.
                 </li>
                 <li>
                     <b>User Accounts & Data Storage</b><br>
-                    We want to have a personal portal for our users. Users would be able to create an account with their
-                    email. The portal helps users organize their information. The general public would be able to view
+                    Another possible application would be a personal portal for users. Users would be able to create
+                    an account with their email to organize their information. The general public would be able to view
                     the performances they booked or plan to attend, as well as opt into a quarterly newsletter/email
                     update. Members would be able to access club related files such as meeting notes, attendance,
                     performances documents, practice videos, sheet music, etc. Club officers would have more additional
