booking page added

--- a/proposal.html
+++ b/proposal.html
@@ -74,7 +74,7 @@
                 </li>
                 <li>
                     <b>User Accounts & Data Storage</b><br>
-                    Another possible application would be a personal portal for users. Users would be able to create
+                    A second possible application would be a personal portal for users. Users would be able to create
                     an account with their email to organize their information. The general public would be able to view
                     the performances they booked or plan to attend, as well as opt into a quarterly newsletter/email
                     update. Members would be able to access club related files such as meeting notes, attendance,
