--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <ul>
             <li><a href="proposal.html">Project Proposal</a></li>
+            <li><a href="booking.html">Booking</a></li>
         </ul>
     </nav>
 
