basic index content and style changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
     </nav>
 
     <main>
+        <section class="highlight-banner">
+            <h2>Minidoka Day Of Rememberance</h2>
+            <h3>Feburary 16</h3>
+            <button>Read More</button>
+        </section>
 
+        <section>
+            <h2>Upcoming Events</h2>
+        </section>
+
+        <section class="event-box">
+            <h3>Nikkei Student Association Day Of Rememberance</h3>
+        </section>
+
+        <section class="event-box">
+            <h3>Taiwanese Overseas Student Association Carnival</h3>
+        </section>
+
+        <section class="event-box">
+            <h3>Sakuracon</h3>
+        </section>
     </main>
 
     <footer>
