--- a/proposal.html
+++ b/proposal.html
@@ -11,14 +11,20 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="proposal.html">Project Proposal</a></li>
+            <li><a href="booking.html">Booking</a></li>
+        </ul>
+    </nav>
+
     <header>
         <h1>Project Proposal</h1>
         <p class="byline"> By Dorothy Lu & Aaron Zhao</p>
-    </header>
+    </header>   
 
     <main>
         <section>
-            
             <h2> Topic Overview</h2>
             <img src="img/springconcert2019.jpg" alt="spring concert 2019">
             <p>
