--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <nav>
         <ul>
+            <span class="logo" aria-label="search"></span>
             <li><a href="proposal.html">Project Proposal</a></li>
             <li><a href="booking.html">Booking</a></li>
         </ul>
@@ -40,7 +41,7 @@
     </main>
 
     <footer>
-
+        <p>&copy; Dorothy Lu & Aaron Zhao</p>
     </footer>
 </body>
 </html>
