Finished CSS for booking page

--- a/booking.html
+++ b/booking.html
@@ -19,17 +19,17 @@
     </nav>
 
     <main>
-        <h2>Book a Performance</h2>
+        <h1>Book a Performance</h1>
         <p>
             We perform all over the Puget Sound area. Book us for your next event using this form!
         </p>
         <section class="booking-form">
-            <form action="/action_page.php">
+        <!-- Need to add after booking page here -->
+            <form action="/after_booking.html">
                 <input type="text" id="name" name="name" placeholder="Name">
                 <input type="email" id="email" name="email" placeholder="Email">
-                <label for="date">Event Date</label>
+                <label for="date">Date</label>
                 <input type="date" id="date" name="date" placeholder="Event Date">
-                <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
                 <textarea id="message" name="message" placeholder="message"></textarea>
                 <input type="submit" value="Submit">
             </form>
