changed banner img

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="w3-display-container w3-center">
             <img class="banner" src="img/minidoka.jpg" style="width: 100%;" alt="Minidoka 2017">
             <div class="w3-display-middle w3-container w3-text-white w3-padding-64 w3-hide-small">
-                <h1 class="w3-text-white">Sun, Feb 16 || UW Taiko Kai Presents</h1>
-                <h1 class="w3-jumbo w3-text-white w3-wide">Minidoka Day of Rememberance</h1>
+                <h1 class="w3-text-white">Sunday, Feburary 16</h1>
+                <h1 class="w3-jumbo w3-text-white w3-wide w3-margin-bottom">Minidoka Day of Rememberance</h1>
                 <!-- <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off"><a
                             href="">LEARN MORE</a></button></h6> -->
-                <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off"><a
+                <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-margin-top w3-hover-opacity-off"><a
                             href="#upcomingPerformances">MORE UPCOMING</a></button></h6>
             </div>
         </div>
