--- a/proposal.html
+++ b/proposal.html
@@ -39,7 +39,7 @@
     <div class="w3-display-container w3-center">
         <img class="banner" src="img/taikokaispringconcert.jpg" style="width: 100%;" alt="Taiko Spring Concert 2019">
         <div class="w3-display-middle w3-container w3-text-white w3-padding-64 w3-hide-small">
-            <h1 class="w3-jumbo w3-text-white">PROJECT PROPOSAL</h1>
+            <h1 class="w3-jumbo w3-text-white w3-wide">PROJECT PROPOSAL</h1>
         </div>
     </div>
 
