--- a/booking.html
+++ b/booking.html
@@ -3,41 +3,92 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=s, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="img/icon-purple.png">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="js/index.js"></script>
     <title>Performance Booking</title>
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <span class="logo" aria-label="search"></span>
-            <li><a href="proposal.html">Project Proposal</a></li>
-            <li><a href="booking.html">Booking</a></li>
-        </ul>
-    </nav>
 
-    <main>
-        <h1>Book a Performance</h1>
-        <p>
+    <!-- Navbar -->
+    <div class="w3-top">
+        <div class="w3-bar w3-black w3-card">
+            <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
+                href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
+                    class="fa fa-bars"></i></a>
+            <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
+            <a href="booking.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Booking</a>
+            <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Proposal</a>
+            <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i
+                    class="fa fa-search"></i></a>
+        </div>
+    </div>
+
+    <!-- Navbar on small screens -->
+    <div id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+        <a href="#upcomingPerformances" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Upcoming
+            Performances</a>
+        <a href="booking.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Booking</a>
+        <a href="proposal.html" class="w3-bar-item w3-button w3-padding-large" onclick="navToggle()">Proposal</a>
+    </div>
+
+    <!-- Image -->
+    <div class="w3-content" style="max-width:2000px;margin-top:46px">
+        <div class="w3-display-container w3-center">
+            <img id="banner" src="img/cover-photo.png" style="width: 100%;" alt="Minidoka 2017">
+        </div>
+    </div>
+
+    <!-- Page Content -->
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
+        <h2 class="w3-wide">Book a Performance</h2>
+        <p class="w3-justify">
             We perform all over the Puget Sound area. Book us for your next event using this form!
         </p>
+        <!-- Booking Form -->
         <section class="booking-form">
-        <!-- Need to add after booking page here -->
+            <!-- Need to add after booking page here -->
             <form action="/after_booking.html">
+                <label for="name" class="w3-left">Name</label>
                 <input type="text" id="name" name="name" placeholder="Name">
+                <label for="Email" class="w3-left">Email</label>
                 <input type="email" id="email" name="email" placeholder="Email">
-                <label for="date">Date</label>
+                <label for="date" class="w3-left">Date</label>
                 <input type="date" id="date" name="date" placeholder="Event Date">
+                <label for="message" class="w3-left">Addutional Message</label>
                 <textarea id="message" name="message" placeholder="message"></textarea>
                 <input type="submit" value="Submit">
             </form>
         </section>
-    </main>
+    </div>
 
-    <footer>
+
+    <!-- Footer -->
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+        <!-- Contact Taiko -->
+        <div class="w3-container w3-content" style="max-width:800px" id="contact">
+            <h2 class="w3-wide w3-center">CONTACT</h2>
+            <div class="w3-row w3-center  w3-padding-32">
+                <div class="w3-col w3-large w3-margin-bottom">
+                    <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
+                    <i class="fa fa-phone" style="width:30px"></i> Phone: 425-879-6802<br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> Email: uwtaiko@gmail.com<br>
+                </div>
+            </div>
+        </div>
+
+        <!-- Social Media Links -->
+        <a class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/uwtaikokai/"></a>
+        <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
+        <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
         <p>&copy; Dorothy Lu & Aaron Zhao</p>
+        </p>
     </footer>
 </body>
 
